--- a/provider-gcp/examples-generated/cloudplatform/serviceaccount.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/serviceaccount.yaml
@@ -1,7 +1,12 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccount
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: service_account
+  name: service-account
 spec:
   forProvider:
     displayName: Service Account
+
+---
+
