--- a/provider-gcp/examples-generated/cloudplatform/serviceaccountkey.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/serviceaccountkey.yaml
@@ -1,9 +1,27 @@
 apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ServiceAccountKey
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: mykey
+  name: mykey
 spec:
   forProvider:
     publicKeyType: TYPE_X509_PEM_FILE
-    serviceAccountIdRef:
-      name: example
+    serviceAccountIdSelector:
+      matchLabels:
+        testing.upbound.io/example-name: myaccount
+
+---
+
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
+kind: ServiceAccount
+metadata:
+  labels:
+    testing.upbound.io/example-name: myaccount
+  name: myaccount
+spec:
+  forProvider:
+    displayName: My Service Account
+
+---
+
