--- a/provider-gcp/examples-generated/compute/routernat.yaml
+++ b/provider-gcp/examples-generated/compute/routernat.yaml
@@ -1,7 +1,9 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: RouterNAT
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: nat
+  name: nat
 spec:
   forProvider:
     logConfig:
@@ -9,6 +11,54 @@ spec:
       filter: ERRORS_ONLY
     natIpAllocateOption: AUTO_ONLY
     region: ${google_compute_router.router.region}
-    routerRef:
-      name: example
+    routerSelector:
+      matchLabels:
+        testing.upbound.io/example-name: router
     sourceSubnetworkIpRangesToNat: ALL_SUBNETWORKS_ALL_IP_RANGES
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: net
+  name: net
+spec:
+  forProvider: {}
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Router
+metadata:
+  labels:
+    testing.upbound.io/example-name: router
+  name: router
+spec:
+  forProvider:
+    bgp:
+    - asn: 64514
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: net
+    region: us-central1
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Subnetwork
+metadata:
+  labels:
+    testing.upbound.io/example-name: subnet
+  name: subnet
+spec:
+  forProvider:
+    ipCidrRange: 10.0.0.0/16
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: net
+    region: us-central1
+
+---
+
