--- a/provider-gcp/examples-generated/compute/diskiampolicy.yaml
+++ b/provider-gcp/examples-generated/compute/diskiampolicy.yaml
@@ -1,10 +1,15 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: DiskIAMPolicy
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: policy
+  name: policy
 spec:
   forProvider:
     name: ${google_compute_disk.default.name}
     policyData: ${data.google_iam_policy.admin.policy_data}
     project: ${google_compute_disk.default.project}
     zone: us-central1-a
+
+---
+
