--- a/provider-gcp/examples-generated/compute/diskresourcepolicyattachment.yaml
+++ b/provider-gcp/examples-generated/compute/diskresourcepolicyattachment.yaml
@@ -1,9 +1,46 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: DiskResourcePolicyAttachment
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: attachment
+  name: attachment
 spec:
   forProvider:
     disk: ${google_compute_disk.ssd.name}
     name: ${google_compute_resource_policy.policy.name}
     zone: us-central1-a
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Disk
+metadata:
+  labels:
+    testing.upbound.io/example-name: ssd
+  name: ssd
+spec:
+  forProvider:
+    image: ${data.google_compute_image.my_image.self_link}
+    size: 50
+    type: pd-ssd
+    zone: us-central1-a
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: ResourcePolicy
+metadata:
+  labels:
+    testing.upbound.io/example-name: policy
+  name: policy
+spec:
+  forProvider:
+    region: us-central1
+    snapshotSchedulePolicy:
+    - schedule:
+      - dailySchedule:
+        - daysInCycle: 1
+          startTime: "04:00"
+
+---
+
