--- a/provider-gcp/examples-generated/compute/externalvpngateway.yaml
+++ b/provider-gcp/examples-generated/compute/externalvpngateway.yaml
@@ -1,7 +1,9 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: ExternalVPNGateway
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: external_gateway
+  name: external-gateway
 spec:
   forProvider:
     description: An externally managed VPN gateway
@@ -9,3 +11,82 @@ spec:
     - id: 0
       ipAddress: 8.8.8.8
     redundancyType: SINGLE_IP_INTERNALLY_REDUNDANT
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: HaVPNGateway
+metadata:
+  labels:
+    testing.upbound.io/example-name: ha_gateway
+  name: ha-gateway
+spec:
+  forProvider:
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: network
+    region: us-central1
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: network
+  name: network
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+    routingMode: GLOBAL
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Router
+metadata:
+  labels:
+    testing.upbound.io/example-name: router1
+  name: router1
+spec:
+  forProvider:
+    bgp:
+    - asn: 64514
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: network
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Subnetwork
+metadata:
+  labels:
+    testing.upbound.io/example-name: network_subnet1
+  name: network-subnet1
+spec:
+  forProvider:
+    ipCidrRange: 10.0.1.0/24
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: network
+    region: us-central1
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Subnetwork
+metadata:
+  labels:
+    testing.upbound.io/example-name: network_subnet2
+  name: network-subnet2
+spec:
+  forProvider:
+    ipCidrRange: 10.0.2.0/24
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: network
+    region: us-west1
+
+---
+
