--- a/provider-gcp/examples-generated/compute/firewall.yaml
+++ b/provider-gcp/examples-generated/compute/firewall.yaml
@@ -1,7 +1,9 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Firewall
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
 spec:
   forProvider:
     allow:
@@ -11,7 +13,22 @@ spec:
       - "8080"
       - 1000-2000
       protocol: tcp
-    networkRef:
-      name: example
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: default
     sourceTags:
     - web
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
+spec:
+  forProvider: {}
+
+---
+
