--- a/provider-gcp/examples-generated/compute/globalnetworkendpoint.yaml
+++ b/provider-gcp/examples-generated/compute/globalnetworkendpoint.yaml
@@ -1,9 +1,27 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: GlobalNetworkEndpoint
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: default-endpoint
+  name: default-endpoint
 spec:
   forProvider:
     fqdn: www.example.com
     globalNetworkEndpointGroup: ${google_compute_global_network_endpoint_group.neg.name}
     port: 90
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: GlobalNetworkEndpointGroup
+metadata:
+  labels:
+    testing.upbound.io/example-name: neg
+  name: neg
+spec:
+  forProvider:
+    defaultPort: "90"
+    networkEndpointType: INTERNET_FQDN_PORT
+
+---
+
