--- a/provider-gcp/examples-generated/compute/globalnetworkendpointgroup.yaml
+++ b/provider-gcp/examples-generated/compute/globalnetworkendpointgroup.yaml
@@ -1,8 +1,13 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: GlobalNetworkEndpointGroup
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: neg
+  name: neg
 spec:
   forProvider:
     defaultPort: "90"
     networkEndpointType: INTERNET_FQDN_PORT
+
+---
+
