--- a/provider-gcp/examples-generated/compute/havpngateway.yaml
+++ b/provider-gcp/examples-generated/compute/havpngateway.yaml
@@ -1,9 +1,27 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: HaVPNGateway
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: ha_gateway1
+  name: ha-gateway1
 spec:
   forProvider:
-    networkRef:
-      name: example
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: network1
     region: us-central1
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: network1
+  name: network1
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+
+---
+
