--- a/provider-gcp/examples-generated/compute/healthcheck.yaml
+++ b/provider-gcp/examples-generated/compute/healthcheck.yaml
@@ -1,10 +1,15 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: HealthCheck
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: tcp-health-check
+  name: tcp-health-check
 spec:
   forProvider:
     checkIntervalSec: 1
     tcpHealthCheck:
     - port: "80"
     timeoutSec: 1
+
+---
+
