--- a/provider-gcp/examples-generated/compute/image.yaml
+++ b/provider-gcp/examples-generated/compute/image.yaml
@@ -1,8 +1,13 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Image
 metadata:
+  labels:
+    testing.upbound.io/example-name: example
   name: example
 spec:
   forProvider:
     rawDisk:
     - source: https://storage.googleapis.com/bosh-gce-raw-stemcells/bosh-stemcell-97.98-google-kvm-ubuntu-xenial-go_agent-raw-1557960142.tar.gz
+
+---
+
