--- a/provider-gcp/examples-generated/compute/imageiampolicy.yaml
+++ b/provider-gcp/examples-generated/compute/imageiampolicy.yaml
@@ -1,9 +1,14 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: ImageIAMPolicy
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: policy
+  name: policy
 spec:
   forProvider:
     image: ${google_compute_image.example.name}
     policyData: ${data.google_iam_policy.admin.policy_data}
     project: ${google_compute_image.example.project}
+
+---
+
