--- a/provider-gcp/examples-generated/compute/instancefromtemplate.yaml
+++ b/provider-gcp/examples-generated/compute/instancefromtemplate.yaml
@@ -1,13 +1,42 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: InstanceFromTemplate
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: tpl
+  name: tpl
 spec:
   forProvider:
     canIpForward: false
     labels:
       my_key: my_value
     name: instance-from-template
-    sourceInstanceTemplateRef:
-      name: example
+    sourceInstanceTemplateSelector:
+      matchLabels:
+        testing.upbound.io/example-name: tpl
     zone: us-central1-a
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: InstanceTemplate
+metadata:
+  labels:
+    testing.upbound.io/example-name: tpl
+  name: tpl
+spec:
+  forProvider:
+    canIpForward: true
+    disk:
+    - autoDelete: true
+      boot: true
+      diskSizeGb: 100
+      sourceImage: debian-cloud/debian-9
+    machineType: e2-medium
+    metadata:
+      foo: bar
+    name: template
+    networkInterface:
+    - network: default
+
+---
+
