--- a/provider-gcp/examples-generated/compute/instancegroupmanager.yaml
+++ b/provider-gcp/examples-generated/compute/instancegroupmanager.yaml
@@ -1,21 +1,46 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: InstanceGroupManager
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: appserver
+  name: appserver
 spec:
   forProvider:
     autoHealingPolicies:
-    - healthCheckRef:
-        name: example
+    - healthCheckSelector:
+        matchLabels:
+          testing.upbound.io/example-name: autohealing
       initialDelaySec: 300
     baseInstanceName: app
     namedPort:
     - name: customHTTP
       port: 8888
     targetPoolsRefs:
-    - name: example
+    - name: appserver
     targetSize: 2
     version:
-    - instanceTemplateRef:
-        name: example
+    - instanceTemplateSelector:
+        matchLabels:
+          testing.upbound.io/example-name: appserver
     zone: us-central1-a
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: HealthCheck
+metadata:
+  labels:
+    testing.upbound.io/example-name: autohealing
+  name: autohealing
+spec:
+  forProvider:
+    checkIntervalSec: 5
+    healthyThreshold: 2
+    httpHealthCheck:
+    - port: "8080"
+      requestPath: /healthz
+    timeoutSec: 5
+    unhealthyThreshold: 10
+
+---
+
