--- a/provider-gcp/examples-generated/compute/instancetemplate.yaml
+++ b/provider-gcp/examples-generated/compute/instancetemplate.yaml
@@ -1,7 +1,9 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: InstanceTemplate
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
 spec:
   forProvider:
     canIpForward: false
@@ -34,3 +36,50 @@ spec:
     tags:
     - foo
     - bar
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Disk
+metadata:
+  labels:
+    testing.upbound.io/example-name: foobar
+  name: foobar
+spec:
+  forProvider:
+    image: ${data.google_compute_image.my_image.self_link}
+    size: 10
+    type: pd-ssd
+    zone: us-central1-a
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: ResourcePolicy
+metadata:
+  labels:
+    testing.upbound.io/example-name: daily_backup
+  name: daily-backup
+spec:
+  forProvider:
+    region: us-central1
+    snapshotSchedulePolicy:
+    - schedule:
+      - dailySchedule:
+        - daysInCycle: 1
+          startTime: "04:00"
+
+---
+
+apiVersion: cloudplatform.gcp.upbound.io/v1beta1
+kind: ServiceAccount
+metadata:
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
+spec:
+  forProvider:
+    displayName: Service Account
+
+---
+
