--- a/provider-gcp/examples-generated/compute/network.yaml
+++ b/provider-gcp/examples-generated/compute/network.yaml
@@ -1,6 +1,11 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Network
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: vpc_network
+  name: vpc-network
 spec:
   forProvider: {}
+
+---
+
