--- a/provider-gcp/examples-generated/compute/networkendpointgroup.yaml
+++ b/provider-gcp/examples-generated/compute/networkendpointgroup.yaml
@@ -1,12 +1,47 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: NetworkEndpointGroup
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: neg
+  name: neg
 spec:
   forProvider:
     defaultPort: "90"
-    networkRef:
-      name: example
-    subnetworkRef:
-      name: example
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: default
+    subnetworkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: default
     zone: us-central1-a
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Subnetwork
+metadata:
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
+spec:
+  forProvider:
+    ipCidrRange: 10.0.0.0/16
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: default
+    region: us-central1
+
+---
+
