--- a/provider-gcp/examples-generated/compute/resourcepolicy.yaml
+++ b/provider-gcp/examples-generated/compute/resourcepolicy.yaml
@@ -1,7 +1,9 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: ResourcePolicy
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: foo
+  name: foo
 spec:
   forProvider:
     region: us-central1
@@ -10,3 +12,6 @@ spec:
       - dailySchedule:
         - daysInCycle: 1
           startTime: "04:00"
+
+---
+
