--- a/provider-gcp/examples-generated/compute/router.yaml
+++ b/provider-gcp/examples-generated/compute/router.yaml
@@ -1,7 +1,9 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Router
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: foobar
+  name: foobar
 spec:
   forProvider:
     bgp:
@@ -12,5 +14,21 @@ spec:
       - range: 1.2.3.4
       - range: 6.7.0.0/16
       asn: 64514
-    networkRef:
-      name: example
+    networkSelector:
+      matchLabels:
+        testing.upbound.io/example-name: foobar
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: foobar
+  name: foobar
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+
+---
+
