--- a/provider-gcp/examples-generated/compute/targetpool.yaml
+++ b/provider-gcp/examples-generated/compute/targetpool.yaml
@@ -1,7 +1,9 @@
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: TargetPool
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
 spec:
   forProvider:
     healthChecks:
@@ -9,3 +11,20 @@ spec:
     instances:
     - us-central1-a/myinstance1
     - us-central1-b/myinstance2
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: HTTPHealthCheck
+metadata:
+  labels:
+    testing.upbound.io/example-name: default
+  name: default
+spec:
+  forProvider:
+    checkIntervalSec: 1
+    requestPath: /
+    timeoutSec: 1
+
+---
+
