--- a/provider-gcp/examples-generated/dns/policy.yaml
+++ b/provider-gcp/examples-generated/dns/policy.yaml
@@ -1,7 +1,9 @@
 apiVersion: dns.gcp.upbound.io/v1beta1
 kind: Policy
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: example-policy
+  name: example-policy
 spec:
   forProvider:
     alternativeNameServerConfig:
@@ -12,7 +14,36 @@ spec:
     enableInboundForwarding: true
     enableLogging: true
     networks:
-    - networkRef:
-        name: example
-    - networkRef:
-        name: example
+    - networkSelector:
+        matchLabels:
+          testing.upbound.io/example-name: network-1
+    - networkSelector:
+        matchLabels:
+          testing.upbound.io/example-name: network-2
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: network-1
+  name: network-1
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+
+---
+
+apiVersion: compute.gcp.upbound.io/v1beta1
+kind: Network
+metadata:
+  labels:
+    testing.upbound.io/example-name: network-2
+  name: network-2
+spec:
+  forProvider:
+    autoCreateSubnetworks: false
+
+---
+
