--- a/provider-gcp/examples-generated/monitoring/notificationchannel.yaml
+++ b/provider-gcp/examples-generated/monitoring/notificationchannel.yaml
@@ -1,10 +1,15 @@
 apiVersion: monitoring.gcp.upbound.io/v1beta1
 kind: NotificationChannel
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: basic
+  name: basic
 spec:
   forProvider:
     displayName: Test Notification Channel
     labels:
       email_address: fake_email@blahblah.com
     type: email
+
+---
+
