--- a/provider-gcp/examples-generated/pubsub/litereservation.yaml
+++ b/provider-gcp/examples-generated/pubsub/litereservation.yaml
@@ -1,8 +1,13 @@
 apiVersion: pubsub.gcp.upbound.io/v1beta1
 kind: LiteReservation
 metadata:
+  labels:
+    testing.upbound.io/example-name: example
   name: example
 spec:
   forProvider:
     project: ${data.google_project.project.number}
     throughputCapacity: 2
+
+---
+
