--- a/provider-gcp/examples-generated/pubsub/litetopic.yaml
+++ b/provider-gcp/examples-generated/pubsub/litetopic.yaml
@@ -1,6 +1,8 @@
 apiVersion: pubsub.gcp.upbound.io/v1beta1
 kind: LiteTopic
 metadata:
+  labels:
+    testing.upbound.io/example-name: example
   name: example
 spec:
   forProvider:
@@ -11,7 +13,24 @@ spec:
       count: 1
     project: ${data.google_project.project.number}
     reservationConfig:
-    - throughputReservationRef:
-        name: example
+    - throughputReservationSelector:
+        matchLabels:
+          testing.upbound.io/example-name: example
     retentionConfig:
     - perPartitionBytes: 32212254720
+
+---
+
+apiVersion: pubsub.gcp.upbound.io/v1beta1
+kind: LiteReservation
+metadata:
+  labels:
+    testing.upbound.io/example-name: example
+  name: example
+spec:
+  forProvider:
+    project: ${data.google_project.project.number}
+    throughputCapacity: 2
+
+---
+
