--- a/provider-gcp/examples-generated/redis/instance.yaml
+++ b/provider-gcp/examples-generated/redis/instance.yaml
@@ -1,7 +1,12 @@
 apiVersion: redis.gcp.upbound.io/v1beta1
 kind: Instance
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: cache
+  name: cache
 spec:
   forProvider:
     memorySizeGb: 1
+
+---
+
