--- a/provider-gcp/examples-generated/sql/database.yaml
+++ b/provider-gcp/examples-generated/sql/database.yaml
@@ -1,8 +1,30 @@
 apiVersion: sql.gcp.upbound.io/v1beta1
 kind: Database
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: database
+  name: database
 spec:
   forProvider:
-    instanceRef:
-      name: example
+    instanceSelector:
+      matchLabels:
+        testing.upbound.io/example-name: instance
+
+---
+
+apiVersion: sql.gcp.upbound.io/v1beta1
+kind: DatabaseInstance
+metadata:
+  labels:
+    testing.upbound.io/example-name: instance
+  name: instance
+spec:
+  forProvider:
+    databaseVersion: MYSQL_8_0
+    deletionProtection: "true"
+    region: us-central1
+    settings:
+    - tier: db-f1-micro
+
+---
+
