--- a/provider-gcp/examples-generated/sql/sslcert.yaml
+++ b/provider-gcp/examples-generated/sql/sslcert.yaml
@@ -1,9 +1,29 @@
 apiVersion: sql.gcp.upbound.io/v1beta1
 kind: SSLCert
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: client_cert
+  name: client-cert
 spec:
   forProvider:
     commonName: client-name
-    instanceRef:
-      name: example
+    instanceSelector:
+      matchLabels:
+        testing.upbound.io/example-name: main
+
+---
+
+apiVersion: sql.gcp.upbound.io/v1beta1
+kind: DatabaseInstance
+metadata:
+  labels:
+    testing.upbound.io/example-name: main
+  name: main
+spec:
+  forProvider:
+    databaseVersion: MYSQL_5_7
+    settings:
+    - tier: db-f1-micro
+
+---
+
