--- a/provider-gcp/examples-generated/storage/bucketaccesscontrol.yaml
+++ b/provider-gcp/examples-generated/storage/bucketaccesscontrol.yaml
@@ -1,10 +1,28 @@
 apiVersion: storage.gcp.upbound.io/v1beta1
 kind: BucketAccessControl
 metadata:
-  name: example
+  labels:
+    testing.upbound.io/example-name: public_rule
+  name: public-rule
 spec:
   forProvider:
-    bucketRef:
-      name: example
+    bucketSelector:
+      matchLabels:
+        testing.upbound.io/example-name: bucket
     entity: allUsers
     role: READER
+
+---
+
+apiVersion: storage.gcp.upbound.io/v1beta1
+kind: Bucket
+metadata:
+  labels:
+    testing.upbound.io/example-name: bucket
+  name: bucket
+spec:
+  forProvider:
+    location: US
+
+---
+
