--- a/provider-gcp/examples-generated/pubsub/topiciampolicy.yaml
+++ b/provider-gcp/examples-generated/pubsub/topiciampolicy.yaml
@@ -7,7 +7,9 @@ metadata:
 spec:
   forProvider:
     policyData: ${data.google_iam_policy.admin.policy_data}
-    project: ${google_pubsub_topic.example.project}
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
     topicSelector:
       matchLabels:
         testing.upbound.io/example-name: example
