--- a/provider-gcp/examples-generated/cloudplatform/folder.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/folder.yaml
@@ -7,7 +7,9 @@ metadata:
 spec:
   forProvider:
     displayName: Department 1
-    parent: organizations/1234567
+    parentSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
 
 ---
 
