--- a/provider-gcp/examples-generated/compute/globalnetworkendpoint.yaml
+++ b/provider-gcp/examples-generated/compute/globalnetworkendpoint.yaml
@@ -7,7 +7,9 @@ metadata:
 spec:
   forProvider:
     fqdn: www.example.com
-    globalNetworkEndpointGroup: ${google_compute_global_network_endpoint_group.neg.name}
+    globalNetworkEndpointGroupSelector:
+      matchLabels:
+        testing.upbound.io/example-name: neg
     port: 90
 
 ---
