--- a/provider-gcp/examples-generated/container/nodepool.yaml
+++ b/provider-gcp/examples-generated/container/nodepool.yaml
@@ -14,7 +14,9 @@ spec:
       oauthScopes:
       - https://www.googleapis.com/auth/cloud-platform
       preemptible: true
-      serviceAccount: ${google_service_account.default.email}
+      serviceAccountSelector:
+        matchLabels:
+          testing.upbound.io/example-name: default
     nodeCount: 1
 
 ---
