gcp: Configure google_service_networking_peered_dns_domain

--- a/provider-gcp/examples/cloudplatform/projectusageexportbucket.yaml
+++ b/provider-gcp/examples/cloudplatform/projectusageexportbucket.yaml
@@ -2,6 +2,8 @@ apiVersion: cloudplatform.gcp.upbound.io/v1beta1
 kind: ProjectUsageExportBucket
 metadata:
   name: example
+  annotations:
+    upjet.upbound.io/manual-intervention: "Has dependencies on an existing Bucket"
 spec:
   forProvider:
     bucketRef: 
