Remove explicit RefFieldName/SelectorFieldName

--- a/provider-gcp/examples-generated/cloudplatform/serviceaccountiampolicy.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/serviceaccountiampolicy.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   forProvider:
     policyData: ${data.google_iam_policy.admin.policy_data}
-    serviceAccountRef:
+    serviceAccountIdRef:
       name: example
