--- a/provider-gcp/examples/cloudplatform/serviceaccountiambinding.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccountiambinding.yaml
@@ -9,5 +9,5 @@ spec:
     members:
       - "user:jane@example.com"
     role: "roles/viewer"
-    serviceAccountRef:
+    serviceAccountIdRef:
       name: example
