--- a/provider-gcp/examples/cloudplatform/serviceaccountiammember.yaml
+++ b/provider-gcp/examples/cloudplatform/serviceaccountiammember.yaml
@@ -8,5 +8,5 @@ spec:
   forProvider:
     member: "user:jane@example.com"
     role: "roles/viewer"
-    serviceAccountRef:
+    serviceAccountIdRef:
       name: example
