--- a/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_serviceaccountiampolicies.yaml
+++ b/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_serviceaccountiampolicies.yaml
@@ -69,7 +69,7 @@ spec:
                     type: string
                   serviceAccountId:
                     type: string
-                  serviceAccountRef:
+                  serviceAccountIdRef:
                     description: A Reference to a named object.
                     properties:
                       name:
@@ -103,7 +103,7 @@ spec:
                     required:
                     - name
                     type: object
-                  serviceAccountSelector:
+                  serviceAccountIdSelector:
                     description: A Selector selects an object.
                     properties:
                       matchControllerRef:
