--- a/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_serviceaccountiambindings.yaml
+++ b/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_serviceaccountiambindings.yaml
@@ -87,7 +87,7 @@ spec:
                     type: string
                   serviceAccountId:
                     type: string
-                  serviceAccountRef:
+                  serviceAccountIdRef:
                     description: A Reference to a named object.
                     properties:
                       name:
@@ -121,7 +121,7 @@ spec:
                     required:
                     - name
                     type: object
-                  serviceAccountSelector:
+                  serviceAccountIdSelector:
                     description: A Selector selects an object.
                     properties:
                       matchControllerRef:
