Remove explicit RefFieldName/SelectorFieldName

--- a/provider-gcp/examples-generated/cloudplatform/projectusageexportbucket.yaml
+++ b/provider-gcp/examples-generated/cloudplatform/projectusageexportbucket.yaml
@@ -4,7 +4,7 @@ metadata:
   name: example
 spec:
   forProvider:
-    bucketRef:
+    bucketNameRef:
       name: example
     projectRef:
       name: example
