Mark project, network and service as required

--- a/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_servicenetworkingpeereddnsdomains.yaml
+++ b/provider-gcp/package/crds/cloudplatform.gcp.upbound.io_servicenetworkingpeereddnsdomains.yaml
@@ -227,6 +227,7 @@ spec:
                     type: string
                 required:
                 - dnsSuffix
+                - service
                 type: object
               providerConfigRef:
                 default:
