gcp: Configure google_cloud_tasks_queue

--- a/provider-gcp/examples/cloudscheduler/job.yaml
+++ b/provider-gcp/examples/cloudscheduler/job.yaml
@@ -4,7 +4,7 @@ metadata:
   name: example
 spec:
   forProvider:
-    region: us-central1-a
+    region: us-central1
     description: Test job
     httpTarget:
     - httpMethod: POST
